--- a/css/style.css
+++ b/css/style.css
@@ -8,15 +8,39 @@ body {
     font-family: Arial, Helvetica, sans-serif;
 }
 
+
+/* HEADER */
 header {
     width: 100%;
     height: 55px;
 }
 
-main {
-    height: calc(100vh -130px);
+.speaker {
+    
 }
 
+
+/* MAIN */
+main {
+    height: calc(100vh - 130px);
+    overflow-y: auto;
+}
+
+.card {
+    width: 14%;
+}
+
+.card > img {
+    width: 100%;
+}
+
+.user {
+    bottom: 16px;
+    color: white;
+}
+
+
+/* FOOTER */
 footer {
     width: 100%;
     height: 75px;
