--- a/css/utilities.css
+++ b/css/utilities.css
@@ -4,8 +4,10 @@
 .justify-end {justify-content: flex-end; }
 .justify-around { justify-content: space-around; }
 .justify-center { justify-content: center;}
+.justify-between { justify-content: space-between;}
 .justify-evenly { justify-content: space-evenly;}
 .align-center { align-items: center; }
+.wrap { flex-wrap: wrap; }
 
 
 /* POSITION */
@@ -38,6 +40,14 @@
 .py-4 { padding: 4px 0; }
 .px-4 { padding: 0 4px; }
 
+.p-5 { padding: 5px; }
+.pt-5 { padding-top: 5px; }
+.pr-5 { padding-right: 5px; }
+.pb-5 { padding-bottom: 5px; }
+.pl-5 { padding-left: 5px; }
+.py-5 { padding: 5px 0; }
+.px-5 { padding: 0 5px; }
+
 .p-8 { padding: 8px; }
 .pt-8 { padding-top: 8px; }
 .pr-8 { padding-right: 8px; }
@@ -45,6 +55,14 @@
 .pl-8 { padding-left: 8px; }
 .py-8 { padding: 8px 0; }
 .px-8 { padding: 0 8px; }
+
+.p-12 { padding: 12px; }
+.pt-12 { padding-top: 12px; }
+.pr-12 { padding-right: 12px; }
+.pb-12 { padding-bottom: 12px; }
+.pl-12 { padding-left: 12px; }
+.py-12 { padding: 12px 0; }
+.px-12 { padding: 0 12px; }
 
 .p-16 { padding: 16px; }
 .pt-16 { padding-top: 16px; }
@@ -117,3 +135,5 @@
 .bg-black { background-color: black; }
 .bg-grey { background-color: #4A4A4A; }
 .bg-darkgrey { background-color: #222222; }
+.bg-opacity {background-color: rgba(125, 125, 125, 0.45);}
+.c-white {color: white;}
